<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="order_list" type="id" />
</resources>